openshift/fx-kafka-connect-cdc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fx-kafka-connect
spec:
  selector:
    app: fx-kafka-connect
  ports:
    - name: http
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fx-kafka-connect
  template:
    metadata:
      labels:
        app: fx-kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: quay.io/debezium/connect:2.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              name: http
          startupProbe:
            httpGet:
              path: /connectors
              port: 8083
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /connectors
              port: 8083
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /connectors
              port: 8083
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: "300m"
              memory: "768Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      volumes: []
